--- a/index.html
+++ b/index.html
@@ -6,19 +6,18 @@
     <title>Aula HTML 1</title>
 </head>
 <body>
-    <h1>Minha primeira aula HTML</h1>
+    <h1 id="Inicio">Minha primeira aula HTML</h1>
     <hr />
     <ul>
         <li><a href="#Computadores">Computadores Antigos</a></li>
         <li><a href="#Internet">Como surgiu a Internet</a></li>
         <li><a href="#Pessoas">Pessoas Importantes</a></li>
         <li><a href="#Linguagens">Linguagens de programação</a></li>
-        <li>O que são Tags</li>
-        <li>O que são Links</li>
-        <li>Referências</li>
+        <li><a href="#Tags">O que são Tags</a></li>
     </ul>
 
     <h1 id="Computadores">Computadores Antigos</h1>
+    <a href="#Inicio">Voltar</a>
     <hr>
     <p>Os primeiros computadores foram criados em 1900 e bolinha, quando você nem pensava em nascer, e não tinha idéia que iria estar fazendo seu primeiro código em HTML, sendo que os computadores anteriores eram usados para cálculos e descifrar criptografias de Guerras.</p>
 
@@ -37,6 +36,7 @@
     </ol>
 <hr>
 <h1 id="Internet">Como surgiu a Internet</h1>
+<a href="#Inicio">Voltar</a>
 <hr>
 <p>Eu já fiquei pensando... "Como o cara criou a Internet, sem Internet ??"</p>
 <p>A resposta é simples meu caro gafanhoto...Criando, <strong>FIM</strong></p>
@@ -48,6 +48,7 @@
 <hr>
 
 <h1 id="Pessoas">Pessoas Importantes</h1>
+<a href="#Inicio">Voltar</a>
 <hr>
 <p>O mundo está cheio de pessoas incríveis, e no meio da Programação, não seria diferente, aqui estão muitas pessoas que foram responsáveis por você ter conexão com o mundo inteiro:</p>
 
@@ -71,20 +72,42 @@
 </ul>
 <hr>
 <h1 id="Linguagens">Linguagens de Programação</h1>
+<a href="#Inicio">Voltar</a>
 <hr>
-<p>As Linguagens de programação são códigos com um padrão de regras, que todas juntas corretamente criam um programa(Software).
+<p>As Linguagens de programação são códigos com um padrão de regras, que todas juntas corretamente criam um programa(Software).</p>
 
 
-<h2>Quais Linguagens de Programação existem ?</h2>
+<h2>A seguir, algumas linguagens de programação:</h2>
  
+<ul>
+    <li>Python</li>
+    <li>JavaScript</li>
+    <li>Java</li>
+    <li>C#</li>
+    <li>PHP</li>
+    <li>Ruby</li>
+    <li>Perl</li>
+    <li>Swift</li>
 
+<blockquote>Através dessas linguagens, há infinitas possibilidades do que pode ser criado, no mundo da programação.</blockquote>
+</ul>
+<hr>
+<h1 id="Tags">O que são Tags ?</h1>
+<a href="#Inicio">Voltar</a>
+<hr>
+<p>As tags são estruturas de linguagem de marcação contento instruções, para criar linhas de códigos e estruturar o site.</p>
 
-
-
-
-
-
-
+<h2>As Tags mais comum no HTML são:</h2>
+<u>
+<li>Tag <. html><./html></li>
+    <li>Tag <. head><./head></li>
+    <li>Tag <. meta></li> 
+    <li>Tag <. body><./body></li>
+    <li>Tag <. section><../section></li>
+    <li>Tag <. article><../article></li>
+    <li>Tag < div>.<../div></li>
+</u>
+<hr>
 
 </body>
 </html>
